// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`a customer account should not be able to remove a group 1`] = `
Array [
  Object {
    "extensions": Object {
      "code": "FORBIDDEN",
      "exception": Object {
        "details": Object {},
        "error": "access-denied",
        "eventData": Object {},
        "isClientSafe": true,
        "reason": "Access Denied",
      },
    },
    "locations": Array [
      Object {
        "column": 5,
        "line": 3,
      },
    ],
    "message": "Access Denied",
    "path": Array [
      "removeAccountGroup",
      "group",
    ],
  },
]
`;

exports[`an admin account cannot delete default groups, 'owner', 'shop manager' 1`] = `
Array [
  Object {
    "extensions": Object {
      "code": "FORBIDDEN",
      "exception": Object {
        "details": Object {},
        "error": "access-denied",
        "eventData": Object {},
        "isClientSafe": true,
        "reason": "Cannot remove default group with ID shopManagerGroup.",
      },
    },
    "locations": Array [
      Object {
        "column": 5,
        "line": 3,
      },
    ],
    "message": "Cannot remove default group with ID shopManagerGroup.",
    "path": Array [
      "removeAccountGroup",
      "group",
    ],
  },
]
`;

exports[`an admin account cannot delete default groups, 'owner', 'shop manager' 2`] = `
Array [
  Object {
    "extensions": Object {
      "code": "FORBIDDEN",
      "exception": Object {
        "details": Object {},
        "error": "access-denied",
        "eventData": Object {},
        "isClientSafe": true,
        "reason": "Cannot remove default group with ID ownerGroup.",
      },
    },
    "locations": Array [
      Object {
        "column": 5,
        "line": 3,
      },
    ],
    "message": "Cannot remove default group with ID ownerGroup.",
    "path": Array [
      "removeAccountGroup",
      "group",
    ],
  },
]
`;
